--- a/greenly/package.json
+++ b/greenly/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^17.3.0",
     "@angular/ssr": "^17.3.5",
     "@fortawesome/fontawesome-free": "^6.7.2",
+    "aos": "^2.3.4",
     "bootstrap": "^5.3.5",
     "express": "^4.18.2",
     "jwt-decode": "^4.0.0",
