--- a/greenly/package.json
+++ b/greenly/package.json
@@ -26,6 +26,7 @@
     "bootstrap": "^5.3.5",
     "express": "^4.18.2",
     "jwt-decode": "^4.0.0",
+    "ngx-countup": "^13.2.0",
     "ngx-owl-carousel-o": "^17.0.0",
     "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
